# transmuta

./: .gitignore  Cargo.toml  Dockerfile.cross  README.md  build-cross-platform.sh  test_output.csv  test_output.json
examples/: schema_csv.csv  schema_json.json
src/: cli.rs  error.rs  main.rs  utils.rs
src/converters/: common.rs  csv.rs  datagen.rs  diff.rs  excel.rs  mod.rs
