[package]
name = "transmuta"
version = "0.1.0"
edition = "2021"
description = "用于数据文件格式互相转换的命令行工具"
authors = ["您的名字"]

[dependencies]
# 命令行参数解析
clap = { version = "4.4", features = ["derive"] }
# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 文件处理
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.21.1"  # Excel处理

# Parquet支持
arrow = "=53.2.0"
parquet = "=53.2.0"

# 日期时间处理
chrono = "=0.4.38"

# 并行处理
rayon = "1.7"
indicatif = "0.17"  # 进度条
num_cpus = "1.15"

# 日志
log = "0.4"
env_logger = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
